# 2023Rover

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  AllApotackagesBefore  Dockerfile  README.md  RoverLaunchInstructions.mk  call_gps_service.sh  cprt_bash_aliases  enablecan.sh  firstTimeInstall.sh  make.sh  os-122335000064-metadata.json  startJoystickDrive.sh  startup.sh
LaunchFiles/: Dockerfile  helloworld  test_launch.py
LaunchFiles/Exampledocker/: Dockerfile  test.cpp
Licences/: ros2_rover Licence
camera_setup/: .gitignore  .startCamerasRTP.sh.swp  InstructionsToSetupArucoImageDisplay.txt  gstreamerPipelines.txt  highPerfCams.sh  niceCam.sh  record_images_to_file.py  setup_ffmpeg_pipe_services.sh  startCameras.sh  startCamerasFancy.sh  startCamerasRTP.sh  start_v4l2loopback.sh  stop_ffmpeg_pipe_services.sh  stop_v4l2loopback.sh
camera_setup/ffmpeg_piping_scripts/: pipe_ffmpeg_to_v4l2loopback.py  pipe_zed2i.sh  requirements.txt
camera_setup/ffmpeg_piping_services/: ffmpeg_lowlight_camera.service  ffmpeg_panornama_camera.service  laptop_cam_ffmpeg.service
docker/: .gitignore  DOCKER_README.md  Dockerfile.cprt_2023Rover  Dockerfile.elevation_map_testing  Dockerfile.isaac_aarch64_cuda  Dockerfile.ros2_humble  Dockerfile.zed
docker/scripts/: build_docker.sh  run_docker.sh
docker/scripts/build_scripts/: build_cprt_isaac.sh  build_cprt_ros2.sh  build_cprt_zedpython.sh  build_erik_elevationmapping_testing.sh
docker/scripts/container_scripts/: install-zed-aarch64.sh  install-zed-x86_64.sh  workspace-entrypoint.sh
docker/scripts/run_scripts/: run_cprt_isaac.sh  run_cprt_ros2.sh  run_cprt_zedpython.sh  run_erik_elevationmapping_testing.sh
docker/scripts/sourced_scripts/: bash_functions.sh
drivers/: installnet.sh
launch/: current_pose_tester_launch.py  moveit_controller_launch.py
network-config/: DrawioNetowrkSchema  generic-documentation.md
src/: temp.txt
src/arm_interface/: package.xml  setup.cfg  setup.py
src/arm_interface/arm_interface/: joystickArmController.py  joystickController.py  joystickScienceController.py  keyboardArmController.py  keyboardArmPublisher.py  trajectoryInterpreter.py  trajectoryPublisher.py
src/arm_interface/launch/: armjoystick.launch.py  armjustjoystick.launch.py  armnojoystick.launch.py  keyboard.launch.py  sciencejoystick.launch.py
src/camera_processing/: package.xml  setup.cfg  setup.py
src/camera_processing/camera_processing/: DepthMapToImageMsgExample.cpp  RelaventPiecesForDepthPublishing.cpp  aruco_markers.py  display_image_locally.py  hsv_image_explore_node.py  publish_image_node.py  temp_testing.py  transform_zed_points_to_map.py  zed_helper.py  zed_node.py  zed_wrapper_nodelet.cpp
src/camera_processing/config/: colour_processing_params.yaml  day_params.yaml  night_params.yaml  testing_params.yaml  zed_params.yaml
src/camera_processing/launch/: display_image_locally.launch.py  hsv_image_explore.launch.py  laptop_aruco.launch.py  transform_zed_points.launch.py  zed.launch.py
src/camera_streaming/: package.xml  setup.cfg  setup.py
src/camera_streaming/camera_streaming/: WebRTCStreamer.py  jpegPoC.py  webrct_node.py
src/camera_streaming/config/: webrtc.yaml
src/camera_streaming/launch/: webRTC.launch.py
src/controller_publisher/: CMakeLists.txt  package.xml
src/controller_publisher/src/: controller_publisher.cpp
src/cprt_interfaces/: CMakeLists.txt  package.xml
src/current_pose_tester/: CMakeLists.txt  package.xml
src/current_pose_tester/src/: current_pose_tester.cpp
src/drive/: package.xml  setup.py
src/drive/drive/: PidController.py  drive_node.py  drive_station.py  drive_testing_driverstation.py  drive_testing_listener.py  electrical_wrapper.py  encoder_wrapper.py  joystick_breakout.py  joystick_drive.py  newNode.py  roboclaw_driver.py  roboclaw_node.py  utils.py
src/drive/launch/: JoystickLaunch.launch.py  RoverDriveWithJoystick.launch.py  RoverDriveWithoutJoystick.launch.py  drivestation_launch.py  roboclaw_node_launch.py  roverdrivewithoutjoystick.launch.py
src/gpio_controller/: package.xml  setup.cfg  setup.py
src/gpio_controller/gpio_controller/: gpioManager.py
src/hardware/: CMakeLists.txt  package.xml  ros2_control_rover_arm.xml
src/hardware/src/: rover_arm.cpp  rover_arm.h
src/image_capture/: package.xml  setup.cfg  setup.py
src/image_capture/image_capture/: science_capture_all.py  test_video_capture.py  video_capture.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: ArmCmd.msg  ArucoMarkers.msg  GPIOmsg.msg  LiveTune.msg  PIDmsg.msg  PointArray.msg  SixFloats.msg  VideoSource.msg
src/interfaces/srv/: ArmCmd.srv  ArmPos.srv  ChangeRes.srv  NavToGPSGeopose.srv  VideoOut.srv
src/joint_broadcaster/: CMakeLists.txt  package.xml
src/joint_broadcaster/src/: joint_broadcaster.cpp
src/joystick_drive/: package.xml  setup.cfg  setup.py
src/joystick_publisher/: CMakeLists.txt  package.xml
src/joystick_publisher/src/: joystick_publisher.h  (+1 more)
src/keyboard_publisher/: CMakeLists.txt  package.xml
src/manual_joint_publisher/: CMakeLists.txt  package.xml
src/moveit_controller/: CMakeLists.txt  package.xml
src/moveit_controller/src/: moveit_controller.cpp  moveit_controller.h
src/moveit_planner/: CMakeLists.txt  package.xml
src/moveit_planner/src/: moveit_planner.cpp  moveit_planner.h
src/moveitarm/: CMakeLists.txt  package.xml
src/nav_commanders/: package.xml  setup.cfg  setup.py
src/py_pubsub/: package.xml  setup.py
src/ros2_rover/: .gitignore
src/rover_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/rover_description/: CMakeLists.txt  package.xml
src/rover_localization/: package.xml  setup.cfg  setup.py
src/rover_urdf/: package.xml  setup.cfg  setup.py
src/rover_urdf2/: setup.py
src/soil_humidity_sensor/: package.xml  setup.cfg  setup.py
src/temp/: LowLightCamParams.yaml  run.sh
src/test_urdf_tool/: package.xml
src/test_urdf_v2/: .setup_assistant  CMakeLists.txt  package.xml
src/tf_keyboard/: package.xml  setup.cfg  setup.py
src/thermometer/: package.xml  setup.cfg  setup.py
(+198 files in other folders)
