<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="christopherrusu1@gmail.com">chris</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros_phoenix</build_depend>
  <build_depend>interfaces</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_phoenix</exec_depend>
  <exec_depend>interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <depend>interfaces</depend>
    <depend>rclpy</depend>
    <depend>ros_phoenix</depend>
    <depend>interfaces</depend>
  </export>
</package>
